# mango_fzco_test

./: .pre-commit-config.yaml  Dockerfile  README.md  TASK.md  docker-compose.yml  pyproject.toml  requirements.txt
.nvim-personal/: setup.lua
src/: db.py  main.py  services.py  settings.py  test.py  utils.py
